--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "material-ui": "^0.16.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "react-youtube": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
