--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "material-ui": "^0.16.6",
     "material-ui-youtube-autocomplete": "^1.2.1",
+    "re-base": "^2.5.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1",
