--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-tap-event-plugin": "^2.0.1",
-    "react-youtube": "^7.3.0"
+    "react-youtube": "^7.3.0",
+    "throttle-debounce": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
