--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "partify",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://lykkeper.github.io/partify-prod/",
+  "homepage": "http://lykkeper.github.io/partify/",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
